--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -263,6 +263,7 @@
     <string name="selected">Marcado</string>
     <string name="unselected">Desmarcado</string>
     <string name="refresh_list">Atualizar lista</string>
+    <string name="fullscreen">Tela cheia</string>
 
     <string name="bt_packages_sent">Mensagens enviadas:</string>
     <string name="bt_fps">Mensagens por segundo&#8230;</string>
