--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -263,6 +263,7 @@
     <string name="selected">Обраний</string>
     <string name="unselected">Не вибрано</string>
     <string name="refresh_list">Оновити список</string>
+    <string name="fullscreen">Повноекранний</string>
 
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
