--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -263,6 +263,7 @@
     <string name="selected">Selected</string>
     <string name="unselected">Unselected</string>
     <string name="refresh_list">Refresh list</string>
+    <string name="fullscreen">Fullscreen</string>
 
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
