--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -4,8 +4,8 @@
     <string name="fplay">FPlay</string>
     <string name="app_by">von Carlos Rafael Gimenes das Neves</string>
     <string name="app_description">Schlanker Musikplayer mit intuitiv bedienbarer Oberfläche, Equalizer, Bass Boost, Sound Virtualisierung und einstellbaren Farben</string>
-    <string name="app_more_info">Mehr Infos notwendig?&lt;br/&gt;Quellcode benötigt?&lt;br/&gt;Fragen?&lt;br/&gt;Fehler gefunden?!?&lt;br/&gt;Mich einfach nur kontaktieren? :)&lt;br/&gt;&lt;br/&gt;Schick mir eine E-Mail:&lt;br/&gt;&lt;a href=\"mailto:dev@carlosrafaelgn.com.br\"&gt;dev@carlosrafaelgn.com.br&lt;/a&gt;&lt;br/&gt;oder besuche die Webseite\dieses Projekts auf GitHub: &lt;a href=\"https://github.com/carlosrafaelgn/FPlayAndroid\"&gt;FPlayAndroid&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Besonderer Dank an die Personen, die mir bei der Übersetzung von FPlay geholfen haben:&lt;br/&gt;&lt;br/&gt;Sviat Hurskyi (&lt;a href=\"mailto:sviat.hurskyi@gmail.com\"&gt;sviat.hurskyi@gmail.com&lt;/a&gt;)&lt;br/&gt;David Gonzalez (&lt;a href=\"mailto:redandy16@gmail.com\"&gt;redandy16@gmail.com&lt;/a&gt;)&lt;br/&gt;&lt;br/&gt;Vielen Dank !! :D</string>
-    <string name="app_more_info2">&lt;br/&gt;&lt;br/&gt;Der Schriftfont, der als dyslexiefreundlich genutzt wird, ist OpenDyslexic Regular, von Abelardo Gonzalez, verfügbar unter &lt;a href=\"http://dyslexicfonts.com\"&gt;dyslexicfonts.com&lt;/a&gt; und lizensiert unter Creative Commons Attribution 3.0 Unported License.&lt;br/&gt;&lt;br/&gt;Der Schriftfont für die skalierbaren Symbole/Icons, icons.ttf, was erstellt unter Nutzung von IcoMoon App, by Keyamoon, verfügbar unter: &lt;a href=\"http://icomoon.io/app\"&gt;icomoon.io/app&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Einige der skalierbaren Symbole wurden von mir erstellt und einige kommen vom IcoMoon Free icon set, by Keyamoon, lizensiert unter Creative Commons License 3.0.&lt;br/&gt;&lt;br/&gt;Die BitmapLruCache class basiert auf dem verfügbaren Code von dem Android Open Source Project, licensiert unter der Apache License 2.0.&lt;br/&gt;&lt;br/&gt;FPlay ist lizensiert unter den Bedingungen von der FreeBSD Lizenz.</string>
+    <string name="app_more_info">Mehr Infos notwendig?&lt;br/&gt;Quellcode benötigt?&lt;br/&gt;Fragen?&lt;br/&gt;Fehler gefunden?!?&lt;br/&gt;Mich einfach nur kontaktieren? :)&lt;br/&gt;&lt;br/&gt;Schick mir eine E-Mail:&lt;br/&gt;&lt;a href=\"mailto:dev@carlosrafaelgn.com.br\"&gt;dev@carlosrafaelgn.com.br&lt;/a&gt;&lt;br/&gt;oder besuche die Webseite dieses Projekts auf GitHub: &lt;a href=\"https://github.com/carlosrafaelgn/FPlayAndroid\"&gt;FPlayAndroid&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Besonderer Dank an die Personen, die mir bei der Übersetzung von FPlay geholfen haben:&lt;br/&gt;&lt;br/&gt;Sviat Hurskyi (&lt;a href=\"mailto:sviat.hurskyi@gmail.com\"&gt;sviat.hurskyi@gmail.com&lt;/a&gt;)&lt;br/&gt;Stefan Fitzenreiter (&lt;a href=\"mailto:sfitzenreiter@gmail.com\"&gt;sfitzenreiter@gmail.com&lt;/a&gt;)&lt;br/&gt;David Gonzalez (&lt;a href=\"mailto:redandy16@gmail.com\"&gt;redandy16@gmail.com&lt;/a&gt;)&lt;br/&gt;&lt;br/&gt;Vielen Dank !! :D</string>
+    <string name="app_more_info2">&lt;br/&gt;&lt;br/&gt;Der Schriftfont, der als dyslexiefreundlich genutzt wird, ist OpenDyslexic Regular, von Abelardo Gonzalez, verfügbar unter &lt;a href=\"http://dyslexicfonts.com\"&gt;dyslexicfonts.com&lt;/a&gt; und lizensiert unter Creative Commons Attribution 3.0 Unported License.&lt;br/&gt;&lt;br/&gt;Der Schriftfont für die skalierbaren Symbole/Icons (icons.ttf) wurde erstellt unter Nutzung der IcoMoon App von Keyamoon, verfügbar unter: &lt;a href=\"http://icomoon.io/app\"&gt;icomoon.io/app&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Einige der skalierbaren Symbole wurden von mir erstellt und einige kommen aus dem "IcoMoon Free icon set" von Keyamoon, lizensiert unter Creative Commons License 3.0.&lt;br/&gt;&lt;br/&gt;Die BitmapLruCache class basiert auf dem verfügbaren Code von dem Android Open Source Projekt, lizensiert unter der Apache License 2.0.&lt;br/&gt;&lt;br/&gt;FPlay ist lizensiert unter den Bedingungen von der FreeBSD Lizenz.</string>
     <string name="app_license">&lt;br/&gt;&lt;br/&gt;Copyright &#169; 2013–2014, Carlos Rafael Gimenes das Neves&lt;br/&gt;All rights reserved.&lt;br/&gt;&lt;br/&gt;Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;br/&gt;&lt;br/&gt;1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;br/&gt;2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;br/&gt;&lt;br/&gt;THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.&lt;br/&gt;&lt;br/&gt;The views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">System Informationen</string>
     <string name="resolution">Auflösung</string>
@@ -48,12 +48,12 @@
     <string name="opt_auto_idle_turn_off">Bei keiner Wiedergabe Player automatisch beenden nach:</string>
     <string name="opt_keep_screen_on">Bildschirm immer aktiv halten</string>
     <string name="opt_volume_control_type">Typ der Lautstärke-Einstellung:</string>
-    <string name="opt_is_divider_visible">Abgrenzer zwischen den Listeinträgen</string>
+    <string name="opt_is_divider_visible">Begrenzer zwischen den Listeinträgen</string>
     <string name="opt_is_vertical_margin_large">Großer Abstand zwischen den Listeinträgen</string>
     <string name="opt_handle_call_key">Benutze Wählschaltfläche für Wiedergabe/Pause</string>
     <string name="opt_do_not_attenuate_volume">Lautstärke nicht verringern bei System-Meldungen</string>
     <string name="opt_play_when_headset_plugged">Automatischer Start der Wiedergabe bei Anschluss eines kabelgebundenen Headset</string>
-    <string name="opt_block_back_key">PrVerhindern die Zurück-Taste an der Rückkehr zum Startbildschirm</string>
+    <string name="opt_block_back_key">Verhindert die Rückkehr zum Startbildschirm beim Druck von Back/Zurück</string>
     <string name="opt_double_click_mode">Nutze zwei Klicks/Berührungen um Titel der Wiedergabeliste abzuspielen</string>
     <string name="opt_marquee_title">Durchlauf des Titels wenn er nicht auf den Bildschirm passt</string>
     <string name="opt_prepare_next">Vorausladen des Titels um die Pausen zwischen aufeinanderfolgenden Titeln zu verringern</string>
@@ -109,12 +109,12 @@
     <string name="equalizer">Equalizer aktivieren</string>
     <string name="bass_boost">Bass Boost</string>
     <string name="virtualization">Virtualisierung</string>
-    <string name="reverb">Nachhall</string>
+    <string name="reverb">Echo/Nachhall</string>
     <string name="visualizer">Visualisierung</string>
     <string name="random_mode">Zufallsmodus</string>
     <string name="settings">Einstellungen</string>
     <string name="about">Info&#8230;</string>
-    <string name="exit">Exit</string>
+    <string name="exit">Verlassen</string>
     <string name="move">Bewegen</string>
     <string name="remove">Entfernen</string>
     <string name="delete">Löschen</string>
@@ -216,9 +216,9 @@
     <string name="touch_to_add_songs">Liste leer!\n\nHier berühren oder + Schaltfläche, um Titel hinzuzufügen :)</string>
     <string name="custom_key_behavior">Veränderbares Verhalten</string>
     <string name="opt_wrap_around_list">Verschieben der Selektion an das andere Ende der Liste wenn Anfang oder Ende erreicht wird</string>
-    <string name="opt_extra_spacing">Größerer Abstand in den Überschriften</string>
+    <string name="opt_extra_spacing">Großer Abstand in den Überschriften</string>
     <string name="opt_old_browser_behavior">Das alte Verhalten nutzen um Titel hinzuzufügen</string>
-    <string name="opt_back_key_always_returns_to_player_when_browsing">Der physische Zurück/Back Knopf bringt immer den Player zurück während neue Titel hinzugefügt werden</string>
+    <string name="opt_back_key_always_returns_to_player_when_browsing">Der Zurück/Back Knopf öffnet den Player während neue Titel hinzugefügt werden</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Zurück zum Player</string>
     <string name="startup_message">Zugriff auf Icecast online Radio-Stationen</string>
