--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -225,11 +225,11 @@
     <string name="sort_by_title">Ordenar por título</string>
     <string name="sort_by_artist">Ordenar por artista</string>
     <string name="sort_by_album">Ordenar por álbum</string>
-    <string name="secondary_line_of_text">Linha secundária de texto</string>
+    <string name="secondary_line_of_text">Linha secundária de texto:</string>
     <string name="scrollbar">Barra de Rolagem</string>
     <string name="scrollbar_to_the_left">Posicionar barras de rolagem à esquerda</string>
-    <string name="scrollbar_playlist">Tipo de barra de rolagem para mostrar na lista de reprodução</string>
-    <string name="scrollbar_browser_type">Tipo de barra de rolagem para mostrar ao adicionar músicas</string>
+    <string name="scrollbar_playlist">Tipo de barra de rolagem para mostrar na lista de reprodução:</string>
+    <string name="scrollbar_browser_type">Tipo de barra de rolagem para mostrar ao adicionar músicas:</string>
     <string name="system_integrated">Integrada com o sistema</string>
     <string name="large">Larga</string>
     <string name="indexed_if_possible">Indexada (se possível)</string>
@@ -249,7 +249,7 @@
     <string name="expand_seek_bar">Expandir a barra de busca antes de buscar</string>
     <string name="by_dir_xiph_org">Por Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
     <string name="creamy">Creme</string>
-    <string name="transition">Transição</string>
+    <string name="transition">Transição:</string>
     <string name="fade">Fade</string>
     <string name="zoom">Zoom</string>
     <string name="repeat_all">Repetir todas</string>
