--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -265,6 +265,8 @@
     <string name="refresh_list">Оновити список</string>
     <string name="fullscreen">Повноекранний</string>
     <string name="choose_image">Виберіть зображення&#8230;</string>
+    <string name="accessibility">Доступність</string>
+    <string name="place_the_playlist_to_the_right">Помістіть відтворення на правій стороні екрану</string>
 
     <string name="bt_packages_sent">Messages sent:</string>
     <string name="bt_fps">Messages per second&#8230;</string>
