Improving accessbility features

--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -9,11 +9,11 @@
     <string name="app_license">&lt;br/&gt;&lt;br/&gt;Copyright &#169; 2013–2014, Carlos Rafael Gimenes das Neves&lt;br/&gt;All rights reserved.&lt;br/&gt;&lt;br/&gt;Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;br/&gt;&lt;br/&gt;1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;br/&gt;2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;br/&gt;&lt;br/&gt;THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.&lt;br/&gt;&lt;br/&gt;The views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">Informações do sistema</string>
     <string name="resolution">Resolução</string>
-    <string name="nothing_playing">[Nada tocando]</string>
+    <string name="nothing_playing">Nada tocando</string>
     <string name="oops">Oops&#8230;</string>
     <string name="loading">Carregando&#8230;</string>
     <string name="adding_songs">Adicionando músicas&#8230;</string>
-    <string name="empty_list">[Vazio]</string>
+    <string name="empty_list">Lista vazia!</string>
     <string name="error">Erro:</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
